final commit to the p[resentation

--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -74,6 +74,10 @@ table {
     border-spacing: 0;
 }
 
+.bagisto-text {
+     color: #0041ff;
+}
+
 /*
     Now here is when interesting things start to appear.
 
